aws-eks/k8s-yml-templates/core/gatekeeper-policies/baseline-constraints/azure-block-automount.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureBlockAutomountToken
metadata:
  name: azure-block-automount
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "devsecops", "dev"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
#Linkerd needs this enabled or mTLS wont work
