aws-eks/k8s-yml-templates/core/gatekeeper-policies/baseline-constraints/container-allowed-capabilities.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureAllowedCapabilities
metadata:
  name: container-allowed-capabilities
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "devsecops", "dev"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedCapabilities: ["NET_ADMIN", "SYS_TIME"]
    requiredDropCapabilities: []

#Linkerd sidecar container needs this.
