aws-eks/k8s-yml-templates/core/gatekeeper-policies/baseline-constraints/container-no-privilege.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureContainerNoPrivilege
metadata:
  name: container-no-privilege
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "devsecops"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
