aws-eks/k8s-yml-templates/core/gatekeeper-policies/baseline-constraints/psp-host-filesystem.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "devsecops"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedHostPaths: []
