aws-eks/k8s-yml-templates/core/gatekeeper-policies/baseline-constraints/psp-host-namespace.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureBlockHostNamespace
metadata:
  name: psp-host-namespace
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "devsecops"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
