aws-eks/k8s-yml-templates/core/gatekeeper-policies/baseline-constraints/psp-host-network-ports.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureHostNetworkingPorts
metadata:
  name: psp-host-network-ports
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "monitoring", "linkerd", "devsecops"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowHostNetwork: false
    #minPort: []
    #maxPort: []
